--- a/style.css
+++ b/style.css
@@ -1,58 +1,4 @@
-.carousel-item{
-    height:100vh;
-    min-height:300px;
-}
-.carousel-caption{
-    bottom: 300px;
-    z-index: 2;
-}
-.carousel-caption h5{
-    font-size: 65px;
-    font-weight: 600;
-    line-height: 80px;
-    margin-top: 25px;
-    z-index: 03;
-}
-.carousel-caption p{
-    width:60%;
-    margin: auto;
-    font-size: 18px;
-    line-height: 30px;
-}
-.carousel-inner::before{
-    content:'';
-    position: absolute;
-    width: 100%;
-    height:100vh;
-    top:0;
-    left:0;
-    background: rgba(0,0,0,0.7);
-    opacity: 0.5;
-    z-index: 1;
-}
-.w-100{
-    height:100vh
-}
-
-/* resposive */
-@media only screen and (max-width:767px){
-    .carousel-item{
-        height:500px
-    }
-    .carousel-caption{
-        bottom:55px;
-        
-    }
-    .carousel-caption h5{
-        font-size:50px ;
-        width:100%;
-        line-height: 60px;
-    }
-    .carousel-caption a{
-        padding: 10px 15px;
-    }
-    .carousel-caption p{
-        padding: 10px 15px;
-        width:100%;
-    }
+.carousel img {
+    filter: brightness(70%);
+    height: 85vh;
 }
