--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
 .carousel img {
     filter: brightness(70%);
     height: 85vh;
+}
+.content{
+    margin-bottom: 180px;
 }
